--- a/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
+++ b/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
@@ -141,7 +141,7 @@
     "    \n",
     "    return obs, suggested_course_name, academic_unit, in_catalogue\n",
     "\n",
-    "def verify_NRC_sigla(df, course_matches, selected_course_name_format, selected_sigla_format, selected_nrc, suggested_nrc, obs):\n",
+    "def verify_nrc_and_sigla(df, course_matches, selected_course_name_format, selected_sigla_format, selected_nrc, suggested_nrc, obs):\n",
     "    academic_unit = ''\n",
     "    obs, suggested_nrc, academic_unit = verify_nrc(df, course_matches, selected_course_name_format, selected_nrc, obs)\n",
     "    obs, suggested_sigla = verify_sigla(df, selected_sigla_format, course_matches, obs, suggested_nrc, selected_nrc, selected_course_name_format)\n",
@@ -172,7 +172,7 @@
     "        if len(course_matches):\n",
     "            academic_unit = course_matches['Escuela'].values[0]\n",
     "            in_vrai_catalogue = True\n",
-    "            obs, suggested_nrc, suggested_sigla, academic_unit = verify_NRC_sigla(df_courses_vrai, course_matches, \n",
+    "            obs, suggested_nrc, suggested_sigla, academic_unit = verify_nrc_and_sigla(df_courses_vrai, course_matches, \n",
     "                                                                                selected_course_name_format, selected_sigla_format, \n",
     "                                                                                selected_nrc, suggested_nrc, obs)\n",
     "            \n",
@@ -183,7 +183,7 @@
     "                course_matches = df_courses_global.loc[df_courses_global['Nombre Curso (formateado)'] == selected_course_name_format]\n",
     "                if len(course_matches):\n",
     "                    academic_unit = course_matches['Escuela'].values[0]\n",
-    "                    obs, suggested_nrc, suggested_sigla, academic_unit = verify_NRC_sigla(df_courses_global, course_matches, selected_course_name_format, \n",
+    "                    obs, suggested_nrc, suggested_sigla, academic_unit = verify_nrc_and_sigla(df_courses_global, course_matches, selected_course_name_format, \n",
     "                                                                                        selected_sigla_format, selected_nrc, suggested_nrc, obs)\n",
     "                else:\n",
     "                    obs, suggested_course_name, academic_unit, in_vrai_catalogue = verify_name(df_courses_global, selected_nrc, selected_sigla_format, obs, False)\n",
