Cambios mínimos y algunos comentarios agregados

--- a/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
+++ b/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
@@ -2,19 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: unidecode in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (1.3.8)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.2.4; however, version 24.3.1 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\ignac\\AppData\\Local\\Programs\\Python\\Python38\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (1.5.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (1.23.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.2.4; however, version 24.3.1 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\ignac\\AppData\\Local\\Programs\\Python\\Python38\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instalación de paquetes requeridos\n",
+    "%pip install unidecode\n",
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importar paquetes requeridos\n",
     "import pandas as pd\n",
     "from unidecode import unidecode\n",
-    "from re import sub\n",
-    "\n",
+    "from re import sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definición de función que permite dejar los nombres de los cursos en un formato adecuado\n",
     "def format_text(input_string):\n",
     "    no_a = unidecode(str(input_string)) # Eliminar tildes\n",
     "    no_sc = sub('[^a-zA-Z0-9]+', '', no_a) # Eliminar caracteres especiales\n",
     "    return no_sc.lower().strip().replace(' ', '') # Eliminar espacios y pasar todo a minúscula\n",
     "\n",
+    "# Definición de función que permite dejar las siglas de los cursos en un formato adecuado\n",
     "def format_course_number(input_string):\n",
     "    if len(input_string) == 1: # Si el número de curso tiene 1 dígito. Ej. COM1\n",
     "        return f'00{input_string}' # Agrega dos ceros. Ej. COM001\n",
@@ -25,13 +83,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Especificar a continuación los nombres de los archivos conteniendo el catálogo cognos y el catálogo VRAI con las respuestas del formulario**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_courses_global_file = 'Cursos programados 2024_FINAL.xlsx'\n",
+    "df_courses_vrai_file = '3. Formulario preselección de cursos intercambio 2024-2. (1-13)_REZAGADOS.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se procede a importar y formatear la información de los cursos desde el **catálogo cognos** (que contiene todos los cursos a dictar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_courses_global = ['NRC', 'Escuela', 'Materia', 'Número Curso', 'Nombre Curso']\n",
-    "df_courses_global = pd.read_excel('Cursos programados 2024_FINAL.xlsx', sheet_name='Hoja2', dtype=str)[cols_courses_global].astype(str)\n",
+    "df_courses_global = pd.read_excel(df_courses_global_file, sheet_name='Hoja2', dtype=str)[cols_courses_global].astype(str)\n",
     "\n",
     "df_courses_global[cols_courses_global] = df_courses_global[cols_courses_global].apply(lambda x : x.str.strip())\n",
     "\n",
@@ -44,27 +126,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se procede a importar y formatear la información de los cursos desde el **catálogo VRAI**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_courses_vrai = ['NRC', 'Escuela', 'Nombre Curso', 'Sigla']\n",
-    "df_courses_vrai = pd.read_excel('3. Formulario preselección de cursos intercambio 2024-2. (1-13)_REZAGADOS.xlsx', sheet_name='Catálogo VRAI', dtype=str)[cols_courses_vrai].astype(str)\n",
+    "cols_courses_vrai = ['NRC', 'Escuela', 'Nombre del curso', 'Sigla']\n",
+    "df_courses_vrai = pd.read_excel(df_courses_vrai_file, sheet_name='Catálogo VRAI', dtype=str)[cols_courses_vrai].astype(str)\n",
     "\n",
     "df_courses_vrai[cols_courses_vrai] = df_courses_vrai[cols_courses_vrai].apply(lambda x : x.str.strip())\n",
+    "df_courses_vrai['Nombre Curso'] = df_courses_vrai['Nombre del curso']\n",
     "df_courses_vrai['Nombre Curso (formateado)'] = df_courses_vrai['Nombre Curso'].apply(format_text)\n",
     "df_courses_vrai['Sigla (formateado)'] = df_courses_vrai['Sigla'].apply(format_text)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se procede a importar y formatear la información de los **cursos generales que los estudiantes indicaron** en el formulario"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_students = ['Nombre completo', 'RUT UC', 'Nombre', 'Sigla', 'NRC']\n",
-    "df_students = pd.read_excel('3. Formulario preselección de cursos intercambio 2024-2. (1-13)_REZAGADOS.xlsx', dtype=str, sheet_name=\"Cursos generales\")[cols_students].astype(str)\n",
+    "df_students = pd.read_excel(df_courses_vrai_file, dtype=str, sheet_name=\"Cursos generales\")[cols_students].astype(str)\n",
     "\n",
     "df_students[cols_students] = df_students[cols_students].apply(lambda x : x.str.strip())\n",
     "df_students['Nombre Curso (formateado)'] = df_students['Nombre'].apply(format_text)\n",
@@ -72,13 +169,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se procede a importar y formatear la información de los **cursos deportivos que los estudiantes indicaron** en el formulario"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_students_dpt = ['Nombre completo', 'RUT UC', 'Nombre', 'Sigla', 'NRC']\n",
-    "df_students_dpt = pd.read_excel('3. Formulario preselección de cursos intercambio 2024-2. (1-13)_REZAGADOS.xlsx', dtype=str, sheet_name='Cursos deportivos')[cols_students].astype(str)\n",
+    "df_students_dpt = pd.read_excel(df_courses_vrai_file, dtype=str, sheet_name='Cursos deportivos')[cols_students].astype(str)\n",
     "\n",
     "df_students_dpt[cols_students_dpt] = df_students_dpt[cols_students_dpt].apply(lambda x : x.str.strip())\n",
     "df_students_dpt['Nombre Curso (formateado)'] = df_students_dpt['Nombre'].apply(format_text)\n",
@@ -89,12 +193,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EN CATALOGO O NO"
+    "A continuación se definen las funciones que se encargan de verificar NRC, sigla y nombre de los cursos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +254,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se encuentra el flujo principal de la automatización"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,9 +277,10 @@
     "        student_name, rut_uc = row['Nombre completo'], row['RUT UC']\n",
     "        suggested_course_name, suggested_nrc, suggested_sigla, academic_unit, obs, in_vrai_catalogue = '', '', '', '', '', ''\n",
     "\n",
+    "        # Se comienza chequeando si el nombre del curso coincide con alguno del catálogo\n",
     "        course_matches = df_courses_vrai.loc[df_courses_vrai['Nombre Curso (formateado)'] == selected_course_name_format]\n",
     "\n",
-    "        # MODIFICAR NRC O SIGLA\n",
+    "        # En caso de que el chequeo de nombre arroje coincidencias, se procede a verificiar NRC y/o sigla\n",
     "        if len(course_matches):\n",
     "            academic_unit = course_matches['Escuela'].values[0]\n",
     "            in_vrai_catalogue = True\n",
@@ -176,7 +288,7 @@
     "                                                                                selected_course_name_format, selected_sigla_format, \n",
     "                                                                                selected_nrc, suggested_nrc, obs)\n",
     "            \n",
-    "        # MODIFICAR NOMBRE\n",
+    "        # En caso de que el chequeo de nombre no arroje coincidencias, se procede a verificiar el nombre del curso\n",
     "        else:\n",
     "            obs, suggested_course_name, academic_unit, in_vrai_catalogue = verify_name(df_courses_vrai, selected_nrc, selected_sigla_format, obs, True)\n",
     "            if not in_vrai_catalogue:\n",
@@ -199,12 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "verify_course_info(df_students, dpt=False)\n",
-    "verify_course_info(df_students_dpt, dpt=True)"
+    "\n",
+    "# Descomentar la línea siguiente si se desea hacer la revisión para cursos deportivos\n",
+    "# verify_course_info(df_students_dpt, dpt=True)"
    ]
   }
  ],
