--- a/02-Automatizaciones_cursos/Revisión_topes_de_horario_e_inscripción/automatizacion.ipynb
+++ b/02-Automatizaciones_cursos/Revisión_topes_de_horario_e_inscripción/automatizacion.ipynb
@@ -11,12 +11,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_courses_vrai_file = '1. Formulario preselección de cursos intercambio 2024-2(1-340).xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_df_students = ['Nombre completo', 'Transcript of Record', 'RUT UC', 'Correo electrónico','Pais de su universidad', 'Universidad de Origen', 'NRC', 'Sigla', 'Curso dentro del catálogo']\n",
-    "df_students = pd.read_excel('1. Formulario preselección de cursos intercambio 2024-2(1-340).xlsx', sheet_name='Cursos generales', dtype=str)[cols_df_students].astype(str)"
+    "df_students = pd.read_excel(df_courses_vrai_file, sheet_name='Cursos generales', dtype=str)[cols_df_students].astype(str)"
    ]
   },
   {
@@ -26,7 +35,7 @@
    "outputs": [],
    "source": [
     "cols_df_courses = ['NRC', 'Escuela', 'Nombre del curso', 'Sigla', 'Sección', 'Campus', 'Horario Cátedra', 'Horario Ayudantía', 'Horario Laboratorio', 'Horario Taller']\n",
-    "df_courses = pd.read_excel('1. Formulario preselección de cursos intercambio 2024-2(1-340).xlsx', sheet_name='Catálogo VRAI', dtype=str)[cols_df_courses].astype(str)"
+    "df_courses = pd.read_excel(df_courses_vrai_file, sheet_name='Catálogo VRAI', dtype=str)[cols_df_courses].astype(str)"
    ]
   },
   {
