Cambios menores notebooks

--- a/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
+++ b/02-Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Especificar a continuación los nombres de los archivos conteniendo el catálogo cognos y el catálogo VRAI con las respuestas del formulario**"
+    "**Especificar a continuación los nombres de los archivos conteniendo el catálogo cognos y el catálogo VRAI junto con las respuestas del formulario**"
    ]
   },
   {
@@ -116,11 +116,9 @@
     "df_courses_global = pd.read_excel(df_courses_global_file, sheet_name='Hoja2', dtype=str)[cols_courses_global].astype(str)\n",
     "\n",
     "df_courses_global[cols_courses_global] = df_courses_global[cols_courses_global].apply(lambda x : x.str.strip())\n",
-    "\n",
     "df_courses_global['Número Curso'] = df_courses_global['Número Curso'].apply(format_course_number)\n",
     "df_courses_global['Sigla'] = df_courses_global['Materia'] + df_courses_global['Número Curso']\n",
     "df_courses_global = df_courses_global.drop(['Materia', 'Número Curso'], axis=1)\n",
-    "\n",
     "df_courses_global['Nombre Curso (formateado)'] = df_courses_global['Nombre Curso'].apply(format_text)\n",
     "df_courses_global['Sigla (formateado)'] = df_courses_global['Sigla'].apply(format_text)"
    ]
