--- a/02-Automatizaciones_cursos/Revisión_topes_de_horario_e_inscripción/automatizacion.ipynb
+++ b/02-Automatizaciones_cursos/Revisión_topes_de_horario_e_inscripción/automatizacion.ipynb
@@ -2,7 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (1.5.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (1.23.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ignac\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.2.4; however, version 24.3.1 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\ignac\\AppData\\Local\\Programs\\Python\\Python38\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +46,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Especificar a continuación el nombre del archivo conteniendo el catálogo VRAI junto con las respuestas del formulario**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +62,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cols_df_students = ['Nombre completo', 'Transcript of Record', 'RUT UC', 'Correo electrónico','Pais de su universidad', 'Universidad de Origen', 'NRC', 'Sigla', 'Curso dentro del catálogo']\n",
-    "df_students = pd.read_excel(df_courses_vrai_file, sheet_name='Cursos generales', dtype=str)[cols_df_students].astype(str)"
+    "A continuación se procede a importar y formatear la información de los **cursos generales que los estudiantes indicaron** en el formulario"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_df_students = ['Nombre completo', 'Transcript of Record', 'RUT UC', 'Correo electrónico','Pais de su universidad', 'Universidad de Origen', 'NRC', 'Sigla', 'Curso dentro del catálogo']\n",
+    "df_students = pd.read_excel(df_courses_vrai_file, sheet_name='Cursos generales', dtype=str)[cols_df_students].astype(str)\n",
+    "names_ruts = df_students[['Nombre completo', 'RUT UC']].drop_duplicates(subset=['RUT UC'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se procede a importar y formatear la información de los cursos desde el **catálogo VRAI**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "names_ruts = df_students[['Nombre completo', 'RUT UC']].drop_duplicates(subset=['RUT UC'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "for index, row in names_ruts.iterrows():\n",
     "    compatible = False\n",
     "    matches = df_students.loc[(df_students['RUT UC'] == row['RUT UC']) & (df_students['Curso dentro del catálogo'] == 'Sí')]\n",
-    "    #print(student_info)\n",
     "    if len(matches) >= 2:\n",
     "        student_info = { 'name': matches['Nombre completo'].values[0], 'tor': matches['Transcript of Record'].values[0], \n",
     "                     'rut_uc': matches['RUT UC'].values[0], 'email': matches['Correo electrónico'].values[0], \n",
