Reemplazar archivo principal automatización info cursos y agregar archivo recopilación de fallos

--- a/2025-1/Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
+++ b/2025-1/Automatizaciones_cursos/Revisión_info_cursos/automatizacion.ipynb
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_courses_global_file = 'Cursos programados 2024_FINAL.xlsx'\n",
-    "df_courses_vrai_file = '3. Formulario preselección de cursos intercambio 2024-2. (1-13)_REZAGADOS.xlsx'"
+    "df_courses_global_file = 'Programación completa UC 20251.xlsx'\n",
+    "df_courses_vrai_file = 'formulario_limpio_rezagados.xlsx'"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "cols_courses_global = ['NRC', 'Escuela', 'Materia', 'Número Curso', 'Nombre Curso']\n",
-    "df_courses_global = pd.read_excel(df_courses_global_file, sheet_name='Hoja2', dtype=str)[cols_courses_global].astype(str)\n",
+    "df_courses_global = pd.read_excel(df_courses_global_file, sheet_name='Programación UC', dtype=str)[cols_courses_global].astype(str)\n",
     "\n",
     "df_courses_global[cols_courses_global] = df_courses_global[cols_courses_global].apply(lambda x : x.str.strip())\n",
     "df_courses_global['Número Curso'] = df_courses_global['Número Curso'].apply(format_course_number)\n",
@@ -160,48 +160,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>27396</td>\n",
-       "      <td>33 - Arte</td>\n",
-       "      <td>Semin de Invest en Art Visuale</td>\n",
-       "      <td>ART4000</td>\n",
-       "      <td>semindeinvestenartvisuale</td>\n",
-       "      <td>art4000</td>\n",
+       "      <td>18165</td>\n",
+       "      <td>06 - Matemáticas</td>\n",
+       "      <td>Probabilidad</td>\n",
+       "      <td>EPG3110</td>\n",
+       "      <td>probabilidad</td>\n",
+       "      <td>epg3110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>25088</td>\n",
-       "      <td>33 - Arte</td>\n",
-       "      <td>Teoria y Problematicas Contemp</td>\n",
-       "      <td>ART4001</td>\n",
-       "      <td>teoriayproblematicascontemp</td>\n",
-       "      <td>art4001</td>\n",
+       "      <td>17316</td>\n",
+       "      <td>06 - Matemáticas</td>\n",
+       "      <td>Metodos Estadisticos Avanzados</td>\n",
+       "      <td>EPG3510</td>\n",
+       "      <td>metodosestadisticosavanzados</td>\n",
+       "      <td>epg3510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10551</td>\n",
-       "      <td>33 - Arte</td>\n",
-       "      <td>Coloquio 2</td>\n",
-       "      <td>FAR4001</td>\n",
-       "      <td>coloquio2</td>\n",
-       "      <td>far4001</td>\n",
+       "      <td>19042</td>\n",
+       "      <td>06 - Matemáticas</td>\n",
+       "      <td>Metodos Estadisticos Avanzados</td>\n",
+       "      <td>EPG3530</td>\n",
+       "      <td>metodosestadisticosavanzados</td>\n",
+       "      <td>epg3530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>14624</td>\n",
-       "      <td>33 - Arte</td>\n",
-       "      <td>Coloquio 4</td>\n",
-       "      <td>FAR4003</td>\n",
-       "      <td>coloquio4</td>\n",
-       "      <td>far4003</td>\n",
+       "      <td>17321</td>\n",
+       "      <td>06 - Matemáticas</td>\n",
+       "      <td>Metodos Exploratorios y Comput</td>\n",
+       "      <td>EPG3730</td>\n",
+       "      <td>metodosexploratoriosycomput</td>\n",
+       "      <td>epg3730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10558</td>\n",
-       "      <td>33 - Arte</td>\n",
-       "      <td>Practica Artistica e Investiga</td>\n",
-       "      <td>FAR4004</td>\n",
-       "      <td>practicaartisticaeinvestiga</td>\n",
-       "      <td>far4004</td>\n",
+       "      <td>20942</td>\n",
+       "      <td>06 - Matemáticas</td>\n",
+       "      <td>Actividad Anual de Seguimiento</td>\n",
+       "      <td>EPG4010</td>\n",
+       "      <td>actividadanualdeseguimiento</td>\n",
+       "      <td>epg4010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -213,83 +213,83 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6809</th>\n",
-       "      <td>28395</td>\n",
-       "      <td>91 - Sociología</td>\n",
-       "      <td>Sociologia del Trabajo</td>\n",
-       "      <td>SOL405</td>\n",
-       "      <td>sociologiadeltrabajo</td>\n",
-       "      <td>sol405</td>\n",
+       "      <th>7109</th>\n",
+       "      <td>16271</td>\n",
+       "      <td>04 - Ingeniería</td>\n",
+       "      <td>Investigacion, Innovacion y Em</td>\n",
+       "      <td>ING2030</td>\n",
+       "      <td>investigacioninnovacionyem</td>\n",
+       "      <td>ing2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6810</th>\n",
-       "      <td>31219</td>\n",
-       "      <td>91 - Sociología</td>\n",
-       "      <td>Cultura Moderna de Occidente</td>\n",
-       "      <td>SOL503</td>\n",
-       "      <td>culturamodernadeoccidente</td>\n",
-       "      <td>sol503</td>\n",
+       "      <th>7110</th>\n",
+       "      <td>25592</td>\n",
+       "      <td>04 - Ingeniería</td>\n",
+       "      <td>Investigacion, Innovacion y Em</td>\n",
+       "      <td>ING2030</td>\n",
+       "      <td>investigacioninnovacionyem</td>\n",
+       "      <td>ing2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6811</th>\n",
-       "      <td>31231</td>\n",
-       "      <td>91 - Sociología</td>\n",
-       "      <td>Cultura Moderna de Occidente</td>\n",
-       "      <td>SOL503</td>\n",
-       "      <td>culturamodernadeoccidente</td>\n",
-       "      <td>sol503</td>\n",
+       "      <th>7111</th>\n",
+       "      <td>25595</td>\n",
+       "      <td>04 - Ingeniería</td>\n",
+       "      <td>Investigacion, Innovacion y Em</td>\n",
+       "      <td>ING2030</td>\n",
+       "      <td>investigacioninnovacionyem</td>\n",
+       "      <td>ing2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6812</th>\n",
-       "      <td>31205</td>\n",
-       "      <td>91 - Sociología</td>\n",
-       "      <td>Teorias Sociales Fundacionales</td>\n",
-       "      <td>SOL504</td>\n",
-       "      <td>teoriassocialesfundacionales</td>\n",
-       "      <td>sol504</td>\n",
+       "      <th>7112</th>\n",
+       "      <td>28541</td>\n",
+       "      <td>04 - Ingeniería</td>\n",
+       "      <td>Intro exploratoria Robotica</td>\n",
+       "      <td>IRB1010</td>\n",
+       "      <td>introexploratoriarobotica</td>\n",
+       "      <td>irb1010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6813</th>\n",
-       "      <td>31217</td>\n",
-       "      <td>91 - Sociología</td>\n",
-       "      <td>Teorias Sociales Fundacionales</td>\n",
-       "      <td>SOL504</td>\n",
-       "      <td>teoriassocialesfundacionales</td>\n",
-       "      <td>sol504</td>\n",
+       "      <th>7113</th>\n",
+       "      <td>31209</td>\n",
+       "      <td>04 - Ingeniería</td>\n",
+       "      <td>Diseno de Sistemas Roboticos (</td>\n",
+       "      <td>IRB2002</td>\n",
+       "      <td>disenodesistemasroboticos</td>\n",
+       "      <td>irb2002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6814 rows × 6 columns</p>\n",
+       "<p>7114 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        NRC          Escuela                    Nombre Curso    Sigla  \\\n",
-       "0     27396        33 - Arte  Semin de Invest en Art Visuale  ART4000   \n",
-       "1     25088        33 - Arte  Teoria y Problematicas Contemp  ART4001   \n",
-       "2     10551        33 - Arte                      Coloquio 2  FAR4001   \n",
-       "3     14624        33 - Arte                      Coloquio 4  FAR4003   \n",
-       "4     10558        33 - Arte  Practica Artistica e Investiga  FAR4004   \n",
-       "...     ...              ...                             ...      ...   \n",
-       "6809  28395  91 - Sociología          Sociologia del Trabajo   SOL405   \n",
-       "6810  31219  91 - Sociología    Cultura Moderna de Occidente   SOL503   \n",
-       "6811  31231  91 - Sociología    Cultura Moderna de Occidente   SOL503   \n",
-       "6812  31205  91 - Sociología  Teorias Sociales Fundacionales   SOL504   \n",
-       "6813  31217  91 - Sociología  Teorias Sociales Fundacionales   SOL504   \n",
+       "        NRC           Escuela                    Nombre Curso    Sigla  \\\n",
+       "0     18165  06 - Matemáticas                    Probabilidad  EPG3110   \n",
+       "1     17316  06 - Matemáticas  Metodos Estadisticos Avanzados  EPG3510   \n",
+       "2     19042  06 - Matemáticas  Metodos Estadisticos Avanzados  EPG3530   \n",
+       "3     17321  06 - Matemáticas  Metodos Exploratorios y Comput  EPG3730   \n",
+       "4     20942  06 - Matemáticas  Actividad Anual de Seguimiento  EPG4010   \n",
+       "...     ...               ...                             ...      ...   \n",
+       "7109  16271   04 - Ingeniería  Investigacion, Innovacion y Em  ING2030   \n",
+       "7110  25592   04 - Ingeniería  Investigacion, Innovacion y Em  ING2030   \n",
+       "7111  25595   04 - Ingeniería  Investigacion, Innovacion y Em  ING2030   \n",
+       "7112  28541   04 - Ingeniería     Intro exploratoria Robotica  IRB1010   \n",
+       "7113  31209   04 - Ingeniería  Diseno de Sistemas Roboticos (  IRB2002   \n",
        "\n",
        "         Nombre Curso (formateado) Sigla (formateado)  \n",
-       "0        semindeinvestenartvisuale            art4000  \n",
-       "1      teoriayproblematicascontemp            art4001  \n",
-       "2                        coloquio2            far4001  \n",
-       "3                        coloquio4            far4003  \n",
-       "4      practicaartisticaeinvestiga            far4004  \n",
+       "0                     probabilidad            epg3110  \n",
+       "1     metodosestadisticosavanzados            epg3510  \n",
+       "2     metodosestadisticosavanzados            epg3530  \n",
+       "3      metodosexploratoriosycomput            epg3730  \n",
+       "4      actividadanualdeseguimiento            epg4010  \n",
        "...                            ...                ...  \n",
-       "6809          sociologiadeltrabajo             sol405  \n",
-       "6810     culturamodernadeoccidente             sol503  \n",
-       "6811     culturamodernadeoccidente             sol503  \n",
-       "6812  teoriassocialesfundacionales             sol504  \n",
-       "6813  teoriassocialesfundacionales             sol504  \n",
+       "7109    investigacioninnovacionyem            ing2030  \n",
+       "7110    investigacioninnovacionyem            ing2030  \n",
+       "7111    investigacioninnovacionyem            ing2030  \n",
+       "7112     introexploratoriarobotica            irb1010  \n",
+       "7113     disenodesistemasroboticos            irb2002  \n",
        "\n",
-       "[6814 rows x 6 columns]"
+       "[7114 rows x 6 columns]"
       ]
      },
      "execution_count": 5,
@@ -310,15 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_courses_vrai = ['NRC', 'Escuela', 'Nombre del curso', 'Sigla']\n",
+    "cols_courses_vrai = ['NRC', 'Escuela', 'Nombre Curso', 'Sigla']\n",
     "df_courses_vrai = pd.read_excel(df_courses_vrai_file, sheet_name='Catálogo VRAI', dtype=str)[cols_courses_vrai].astype(str)\n",
     "\n",
     "df_courses_vrai[cols_courses_vrai] = df_courses_vrai[cols_courses_vrai].apply(lambda x : x.str.strip())\n",
-    "df_courses_vrai['Nombre Curso'] = df_courses_vrai['Nombre del curso']\n",
+    "#df_courses_vrai['Nombre Curso'] = df_courses_vrai['Nombre del curso']\n",
     "df_courses_vrai['Nombre Curso (formateado)'] = df_courses_vrai['Nombre Curso'].apply(format_text)\n",
     "df_courses_vrai['Sigla (formateado)'] = df_courses_vrai['Sigla'].apply(format_text)"
    ]
@@ -332,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_students = ['Nombre completo', 'RUT UC', 'Nombre', 'Sigla', 'NRC']\n",
-    "df_students = pd.read_excel(df_courses_vrai_file, dtype=str, sheet_name=\"Cursos generales\")[cols_students].astype(str)\n",
+    "df_students = pd.read_excel(df_courses_vrai_file, dtype=str, sheet_name=\"Formularios limpios\")[cols_students].astype(str)\n",
     "\n",
     "df_students[cols_students] = df_students[cols_students].apply(lambda x : x.str.strip())\n",
     "df_students['Nombre Curso (formateado)'] = df_students['Nombre'].apply(format_text)\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,22 +404,35 @@
     "    return obs, suggested_sigla\n",
     "\n",
     "def verify_name(df, selected_nrc, selected_sigla_format, obs, vrai_check):\n",
-    "    suggested_course_name, academic_unit, in_catalogue = '', '', ''\n",
-    "    course_match = df.loc[(df['NRC'] == selected_nrc) & (df['Sigla (formateado)'] == selected_sigla_format)]\n",
-    "    if len(course_match) == 1:\n",
-    "        suggested_course_name, academic_unit = course_match['Nombre Curso'].values[0], course_match['Escuela'].values[0]\n",
-    "        obs += 'Nombre inválido. '\n",
+    "    suggested_course_name, academic_unit, in_catalogue, suggested_nrc = '', '', '', ''\n",
+    "    course_matches = df.loc[df['Sigla (formateado)'] == selected_sigla_format]\n",
+    "    if len(course_matches) >= 1:\n",
+    "        suggested_course_name, academic_unit = course_matches['Nombre Curso'].values[0], course_matches['Escuela'].values[0]\n",
+    "        obs += 'Nombre inválido '\n",
     "        if vrai_check:\n",
     "            in_catalogue = True\n",
     "        else:\n",
     "            in_catalogue = False\n",
+    "        \n",
+    "        if len(course_matches) == 1:\n",
+    "            suggested_nrc = course_matches['NRC'].values[0]\n",
+    "            if suggested_nrc == selected_nrc:\n",
+    "                obs += '(Sección única y NRC correcto). '\n",
+    "                suggested_nrc = ''\n",
+    "            else:\n",
+    "                obs += '(Sección única y NRC incorrecto). '\n",
+    "\n",
+    "        else:\n",
+    "            obs += '(Múltiples secciones). '\n",
+    "\n",
+    "\n",
     "    else:\n",
     "        if vrai_check:\n",
     "            in_catalogue = False\n",
     "        else:\n",
-    "            obs += 'ERROR, se requiere revisión. No existe un nombre para NRC y sigla indicados. '\n",
+    "            obs += 'ERROR, se requiere revisión. No existe un nombre para la sigla indicada. '\n",
     "    \n",
-    "    return obs, suggested_course_name, academic_unit, in_catalogue\n",
+    "    return obs, suggested_course_name, academic_unit, in_catalogue, suggested_nrc\n",
     "\n",
     "def verify_nrc_and_sigla(df, course_matches, selected_course_name_format, selected_sigla_format, selected_nrc, suggested_nrc, obs):\n",
     "    academic_unit = ''\n",
@@ -438,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +479,7 @@
     "            \n",
     "        # En caso de que el chequeo de nombre no arroje coincidencias, se procede a verificiar el nombre del curso\n",
     "        else:\n",
-    "            obs, suggested_course_name, academic_unit, in_vrai_catalogue = verify_name(df_courses_vrai, selected_nrc, selected_sigla_format, obs, True)\n",
+    "            obs, suggested_course_name, academic_unit, in_vrai_catalogue, suggested_nrc = verify_name(df_courses_vrai, selected_nrc, selected_sigla_format, obs, True)\n",
     "            if not in_vrai_catalogue:\n",
     "                course_matches = df_courses_global.loc[df_courses_global['Nombre Curso (formateado)'] == selected_course_name_format]\n",
     "                if len(course_matches):\n",
@@ -474,7 +487,7 @@
     "                    obs, suggested_nrc, suggested_sigla, academic_unit = verify_nrc_and_sigla(df_courses_global, course_matches, selected_course_name_format, \n",
     "                                                                                        selected_sigla_format, selected_nrc, suggested_nrc, obs)\n",
     "                else:\n",
-    "                    obs, suggested_course_name, academic_unit, in_vrai_catalogue = verify_name(df_courses_global, selected_nrc, selected_sigla_format, obs, False)\n",
+    "                    obs, suggested_course_name, academic_unit, in_vrai_catalogue, suggested_nrc = verify_name(df_courses_global, selected_nrc, selected_sigla_format, obs, False)\n",
     "            \n",
     "        df_output.loc[len(df_output)] = [student_name, rut_uc, selected_course_name, suggested_course_name, \n",
     "                                        academic_unit, selected_nrc, suggested_nrc, selected_sigla, suggested_sigla, in_vrai_catalogue, obs]\n",
@@ -487,14 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "verify_course_info(df_students, dpt=False)\n",
     "\n",
     "# Descomentar la línea siguiente si se desea hacer la revisión para cursos deportivos\n",
-    "# verify_course_info(df_students_dpt, dpt=True)"
+    "#verify_course_info(df_students_dpt, dpt=True)"
    ]
   }
  ],
